--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -1,7 +1,57 @@
-li a {
-  text-decoration: none;
+.vertical-center {
+  align-items: center;
 }
 
-ul {
-  list-style-type: none;
+/* Header */
+/* Menu */
+.main-menu {
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
 }
+
+.main-menu li a {
+  font-family: "Manrope", sans-serif;
+  text-decoration: none;
+  color: #33354d;
+}
+
+.main-menu li a:hover {
+  color: #6366f1;
+}
+
+.main-menu li a:active {
+  color: #33354d;
+}
+
+/* Dark Mode Switch */
+.dark-mode-switch {
+  width: 8.9375em;
+}
+/* Header End* /
+
+/* Form Elements */
+
+/* Label */
+.dark-mode-switch label {
+  font-family: "Manrope", sans-serif;
+  color: #565973;
+}
+
+/* Button */
+.btn-sign-in-up {
+  width: 8.75em;
+  height: 2.25em;
+  background-color: #6366f1;
+  border-radius: 0.5dvh;
+  color: white;
+}
+
+/* Form Elements End *
+
+
+/* Other Fancy Stuff */
+.primary-background-color {
+  background-color: white;
+}
+/* Other Fancy Stuff END */
