--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -16,3 +16,62 @@
 .font-color-header-a {
   color: 33354d;
 }
+
+.font-color-heading {
+  color: #131022;
+}
+
+.font-color-text {
+  color: #585c7b;
+}
+
+.extra-bold {
+  font-weight: 800;
+}
+
+.font-regular {
+  font-weight: 400;
+}
+
+/* Text */
+p,
+span {
+  font-family: "Manrope", sans-serif;
+}
+
+.text-center {
+  text-align: center;
+}
+
+/* Title's Headers */
+h1 {
+  font-size: 2.5rem;
+}
+h2 {
+  font-size: 2rem;
+}
+h3 {
+  font-size: 1.75rem;
+}
+h4 {
+  font-size: 1.5rem;
+}
+h5 {
+  font-size: 1.25rem;
+}
+h6 {
+  font-size: 1rem;
+}
+
+/* Font Sizes */
+.promo-size-text-a {
+  font-size: 2.13125rem;
+}
+
+.font-size-regular {
+  font-size: 1.125rem;
+}
+
+.font-link-small {
+  font-size: 0.875rem;
+}
