--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -25,12 +25,20 @@
   color: #585c7b;
 }
 
+.font-color-prmotion-text {
+  color: #0b0f19;
+}
+
 .extra-bold {
   font-weight: 800;
 }
 
 .font-regular {
   font-weight: 400;
+}
+
+.font-semi {
+  font-weight: 600;
 }
 
 /* Text */
@@ -66,6 +74,10 @@ h6 {
 /* Font Sizes */
 .promo-size-text-a {
   font-size: 2.13125rem;
+}
+
+.promo-size-text-b {
+  font-size: 3.5rem;
 }
 
 .font-size-regular {
