--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,8 +1,11 @@
+/* Lets import some vars */
+@import url(/assets/css/vars.css);
+
 .container {
   /* With 100% is fallback incase we are using older browsers. Code is 
     being readd from top to bottom in CSS
     */
-  max-width: 81.25rem;
+  max-width: var(--max-content-width);
 }
 
 .inline-block {
@@ -11,7 +14,7 @@
 
 /* Footer Container Height */
 .container-footer {
-  min-height: 8.125rem;
+  min-height: var(--min-footer-height);
 }
 /* Footer Container Height */
 
@@ -31,6 +34,8 @@
 
 /* Main */
 .main-grid {
+  position: relative;
+  overflow: hidden;
   display: grid;
   grid-template-rows: auto auto auto;
   grid-template-columns: 1fr;
@@ -76,52 +81,53 @@
 .banner-promotion-grid {
   position: relative;
   display: grid;
+
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto auto;
   gap: 0rem;
-  grid-template-areas:
-    "promotion-title ."
-    "promotion-text-app  ."
-    "promotion-link promotion-image";
-  /* Guessing and trying to emulate size and position from Figma*/
 
-  padding-top: 9.75em;
-  padding-bottom: 3.1em;
+  overflow: hidden;
+
+  padding-top: var(--padding-9);
+  padding-bottom: var(--padding-3);
 }
 .promotion-title {
-  grid-area: promotion-title;
+  grid-row: 1/1;
+  grid-column: 1/2;
 }
 .promotion-text-app {
-  grid-area: promotion-text-app;
+  grid-row: 2/2;
+  grid-column: 1/2;
 }
 .promotion-link {
-  grid-area: promotion-link;
-  padding-top: 13em;
+  grid-row: 3/3;
+  grid-column: 1/2;
+  padding-top: var(--padding-113);
 }
 .promotion-image {
-  grid-area: promotion-image;
+  grid-row: 1/4;
+  grid-column: 2/2;
 }
 .promotion-title,
 .promotion-text-app {
-  max-width: 32.875em;
+  max-width: var(--promotion-text-app);
 }
 
 /* AI Generated */
-.banner-promotion-grid::before {
-  content: "";
-  position: absolute;
+.banner-background-gradient {
+  position: fixed;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
   width: 100vw;
-  height: 100%;
+  height: 57rem;
+  /* Guessing and trying to emulate size and position from Figma*/
   background: radial-gradient(
     125% 125% at 50% 110%,
     rgba(99, 102, 241, 0.1) 0%,
     rgba(218, 70, 239, 0.05) 42%,
     rgba(241, 244, 253, 0.07) 83%
   );
-  z-index: -1; /* Placera bakgrunden bakom innehållet */
 }
 
 /* App Features */
@@ -136,6 +142,7 @@
 }
 .app-features-companies {
   grid-area: app-features-companies;
+  overflow: hidden;
 }
 .app-features-phone-image {
   grid-area: app-features-phone-image;
@@ -147,7 +154,7 @@
 /* Apps Link Flex */
 .flex-banner-app-links-box {
   display: flex;
-  padding-top: 3.125em;
+  padding-top: var(--promotion-app-link-box-top);
 }
 
 /* FLEX Layout */
@@ -174,19 +181,24 @@
 /* 40px Gap */
 .flex-gap-sm-a {
   /* Same as REM Parent Container in Pixel / 16 */
-  gap: 2.5em;
+  gap: var(--header-dark-mode-gap-a);
 }
 
 /* 40px Gap */
 .flex-gap-sm-b {
   /* Same as REM Parent Container in Pixel / 16 */
-  gap: 1.875em;
+  gap: var(--header-dark-mode-gap-b);
 }
 
 .header-content-flex {
   display: flex;
   flex-direction: row;
   min-height: 4.75rem;
+}
+
+.background-wrapper {
+  container-type: inline-size;
+  container-name: background-w;
 }
 
 .header-wrapper {
@@ -219,33 +231,33 @@
 
 /* Widths */
 .with-4 {
-  width: 4em;
+  width: var(--width-4);
 }
 
 .padding-top-bottom-15 {
-  padding: 1.875rem 0 1.875rem 0;
+  padding: var(--padding-15) 0 var(--padding-15) 0;
 }
 
 .padding-top-bottom-2 {
-  padding: 2.5rem 0 2.5rem 0;
+  padding: var(--padding-2) 0 var(--padding-2) 0;
 }
 
 .padding-top-2 {
-  padding: 2.5rem 0 0 0;
+  padding: var(--padding-2) 0 0 0;
 }
 
 .padding-top-1 {
-  padding: 1rem 0 0 0;
+  padding: var(--padding-09) 0 0 0;
 }
 
 .padding-right-1 {
-  padding-right: 1.25em;
+  padding-right: var(--padding-1);
 }
 .padding-left-1 {
-  padding-left: 1.25em;
+  padding-left: var(--padding-1);
 }
 .padding-right-05 {
-  padding-right: 0.5em;
+  padding-right: var(--padding-05);
 }
 
 /* Paddings */
@@ -253,9 +265,10 @@
 /* Responsive Design */
 /* Header */
 @container header (width < 1300px) {
-  .header-content-flex {
-    padding-left: 1.09375rem;
-    padding-right: 1.09375rem;
+  .header-content-flex,
+  .mobile-menu {
+    padding-left: var(--padding-07);
+    padding-right: var(--padding-07);
   }
   .nav,
   .btn-sign-in-up {
@@ -264,26 +277,12 @@
   .flex-gap-sm-a {
     gap: 0rem;
   }
-
-  /* 72px/2 Gap */
-  .flex-gap-sm-b {
-    /* Same as REM Parent Container in Pixel / 16 */
-    gap: 0em;
-    justify-content: flex-end;
-  }
-
-  .container {
-    /* With 100% is fallback incase we are using older browsers. Code is 
-      being readd from top to bottom in CSS
-      */
-    max-width: 48rem;
-  }
 }
 @container header (width < 768px) {
   .flex-box {
-    min-width: 12.1875rem;
-    padding-left: 1.09375rem;
-    padding-right: 1.09375rem;
+    min-width: var(--max-content-width-s-1);
+    padding-left: var(--padding-07);
+    padding-right: var(--padding-07);
   }
   .nav {
     display: none;
@@ -297,26 +296,76 @@
   }
 }
 
+@container background-w (width < 1300px) {
+  .banner-background-gradient {
+    height: var(--promotion-banner-height-t);
+  }
+}
+
 /* Banner & Promotion */
 @container main (width < 1300px) {
   .flex-banner-app-links-box {
-    padding-left: 1.9375rem;
-    padding-right: 1.9375rem;
+    padding-left: var(--padding17);
+    padding-right: var(--padding17);
   }
   .content-max-width {
-    max-width: 24.375rem;
+    max-width: var(--max-content-width-m-1);
+  }
+
+  .banner-promotion-grid {
+    padding-top: var(--min-header-height);
+    padding-bottom: var(--padding-3);
+    align-items: center;
+    justify-items: center;
+
+    .promotion-image {
+      grid-row: 1/3;
+      grid-column: 2/2;
+
+      .iphone-1 {
+        aspect-ratio: 1;
+        position: relative;
+        width: 28.25em;
+        height: 26.0626em;
+        right: 8em;
+      }
+    }
+  }
+
+  .promotion-title {
+    grid-row: 1/1;
+    grid-column: 1/3;
+
+    padding-left: var(--padding-113);
+    padding-right: var(--padding-113);
+    max-width: 100%;
+
+    text-align: center;
+
+    .font-color-heading-text {
+      font-size: var(--font-size-promotion-x);
+    }
+  }
+  .promotion-text-app {
+    padding-top: var(--padding-9);
+    padding-left: var(--padding-15);
+    padding-right: var(--padding-15);
+  }
+  .promotion-link {
+    padding-top: var(--padding-3);
+    padding-left: var(--padding-15);
   }
 }
-@container main (width < 768px) {
+@container main (width < var(--mobile-pad)) {
   .banner-content-flex {
     flex-direction: column;
   }
   .flex-banner-app-links-box {
-    padding-left: 1.9375rem;
-    padding-right: 1.9375rem;
+    padding-left: var(--padding17);
+    padding-right: var(--padding17);
   }
   .content-max-width {
-    max-width: 24.375rem;
+    max-width: var(--max-content-width-m-1);
   }
 }
 /* Responsive Design END */
