--- a/assets/css/vars.css
+++ b/assets/css/vars.css
@@ -52,15 +52,19 @@
   --promotion-app-link-box-top: 3.125em;
   --padding-113: 13em;
   --padding-9: 9.75em;
+  --padding-4: 4.375em;
   --padding-3: 3.1em;
   --padding-2: 2.5rem;
-  --padding17: 1.9375rem;
-  --padding-15: 1.875rem;
+  --padding-19: 2.1875em;
+  --padding17: 1.9375em;
+  --padding-15: 1.875em;
+  --padding-12: 1.625em;
   --padding-11: 1.25em;
   --padding-1: 1.25em;
-  --padding-09: 1rem;
-  --padding-07: 1.09375rem;
+  --padding-09: 1em;
+  --padding-07: 1.09375em;
   --padding-056: 0.8625em;
+  --padding-052: 0.625em;
   --padding-05: 0.5em;
 
   /* Gaps */
