--- a/assets/css/vars.css
+++ b/assets/css/vars.css
@@ -14,6 +14,7 @@
   --font-primary: #565973;
   --font-secondary: #0b0f19;
   --font-text-color: #585c7b;
+  --font-label-color: #131022;
 
   /* Font Sizes */
   --font-size-primary: 1rem;
