--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -13,6 +13,11 @@
   );
 }
 
+.container {
+  max-width: var(--max-content-width);
+  margin: auto;
+}
+
 /* Header & Navigation */
 .flex-header,
 .dark-mode-switch,
@@ -33,37 +38,47 @@
   }
 }
 
+/* Promotion */
+.promotion-grid {
+  display: grid;
+}
+
 /* Main Layout END*/
 
 /* Responsive CSS */
 
 /* Wrappers */
+/* Wwe are using Flex here */
 .header-wrapper {
   container-type: inline-size;
   container-name: header;
 }
 
+/* Wwe are using Grid here */
+.main-wrapper {
+  container-type: inline-size;
+  container-name: main;
+}
+
+.base-wrapper {
+  overflow: hidden;
+  container-type: inline-size;
+  container-name: base;
+}
+
 /* Break Points */
-/* Mobile Phones */
-@container header (width < 400px) {
-  .flex-header {
-    padding: var(--padding-052);
-  }
-  .navigation,
-  .label-text,
-  .btn-sign-button-container {
+/* Base */
+@container base (1200px >= width >= 1600px) {
+}
+
+/* Header Area */
+@container header (width >= 1200px ) {
+  .mobile-menu {
     display: none;
-  }
-  .fa-lg {
-    line-height: 0em;
-    vertical-align: -0.135em;
-  }
-  .dark-mode-switch {
-    padding-right: var(--padding-12);
   }
 }
 /* Tables & Mini PC */
-@container header ( 390px < width < 768px) {
+@container header ( 768px < width < 1199px) {
   .flex-header {
     padding: var(--padding-052);
   }
@@ -82,9 +97,170 @@
     vertical-align: baseline;
   }
 }
+/* Mobile Phones */
+@container header (width <= 767px) {
+  .flex-header {
+    padding: var(--padding-052);
+  }
+  .navigation,
+  .label-text,
+  .btn-sign-button-container {
+    display: none;
+  }
+  .fa-lg {
+    line-height: 0em;
+    vertical-align: -0.135em;
+  }
+  .dark-mode-switch {
+    padding-right: var(--padding-12);
+  }
+}
 
-@container header ( width > 768px ) {
-  .mobile-menu {
+/* Main Areas */
+/* Promotion Area */
+@container main (width >= 1200px ) {
+}
+@container main ( 768px < width < 1199px) {
+  /* Base */
+  .container {
+    width: 100%;
+  }
+  /* Promotion Area */
+  .promotion-grid {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(5, auto);
+  }
+
+  .promotion-grid-header-text {
+    grid-row: 1/1;
+    grid-column: 1/3;
+
+    padding-top: var(--padding-2);
+    padding-bottom: var(--padding-2);
+    padding-right: var(--padding-111);
+    padding-left: var(--padding-111);
+  }
+  .promotion-grid-text {
+    grid-row: 2/2;
+    grid-column: 1/1;
+
+    padding-top: var(--padding-5);
+    padding-bottom: var(--padding-288);
+    padding-left: var(--padding-15);
+  }
+  .promotion-grid-apps-links {
+    grid-row: 3/3;
+    grid-column: 1/1;
+    div {
+      display: flex;
+      flex-direction: row;
+      text-align: center;
+      gap: 1rem;
+
+      .apps-image-links-normal {
+        display: none;
+      }
+    }
+    padding-left: var(--padding-15);
+  }
+
+  .promotion-grid-link,
+  .promotion-grid-phone {
+    padding-top: var(--padding-15);
+    padding-bottom: var(--padding-15);
+  }
+
+  .promotion-grid-link {
+    grid-row: 4/4;
+    grid-column: 1/1;
+  }
+
+  .promotion-grid-phone {
+    grid-row: 2/5;
+    grid-column: 2/2;
+    position: relative;
+    margin-right: var(--padding-15);
+
+    .iphone-1 {
+      position: absolute;
+      margin: auto;
+      width: 100%;
+      height: auto;
+      transform: scale(1);
+    }
+  }
+
+  .discover-more-btn {
+    align-items: center;
+    padding-left: var(--padding-15);
+    img {
+      padding-right: var(--padding-11);
+    }
+  }
+}
+@container main ( width <= 767px) {
+  /* Base */
+  .container {
+    width: 100%;
+  }
+  /* Promotion Area */
+  /* Grid Setup */
+  .promotion-grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(5, auto);
+  }
+
+  .promotion-grid-header-text {
+    grid-row: 1/1;
+    grid-column: 1/1;
+
+    padding-top: var(--padding-2);
+    padding-bottom: var(--padding-2);
+    padding-right: var(--padding-3);
+    padding-left: var(--padding-3);
+  }
+  .promotion-grid-text {
+    grid-row: 2/2;
+    grid-column: 1/1;
+    text-align: center;
+
+    padding-top: var(--padding-31);
+    padding-bottom: var(--padding-31);
+    padding-right: var(--padding-059);
+    padding-left: var(--padding-059);
+  }
+  .promotion-grid-apps-links {
+    grid-row: 3/3;
+    grid-column: 1/1;
+    div {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+
+      .apps-image-links-small {
+        display: none;
+      }
+    }
+  }
+  .promotion-grid-link {
+    grid-row: 4/4;
+    grid-column: 1/1;
+
+    padding-top: var(--padding-15);
+    padding-bottom: var(--padding-15);
+
+    vertical-align: baseline;
+  }
+
+  .discover-more-btn {
+    align-items: center;
+    justify-content: center;
+
+    img {
+      padding-right: var(--padding-11);
+    }
+  }
+  .promotion-grid-phone {
     display: none;
   }
 }
