--- a/assets/css/utils.css
+++ b/assets/css/utils.css
@@ -6,6 +6,14 @@
   display: flex;
 }
 
+.flex-direction-column {
+  flex-direction: column;
+}
+
 .fa-i-c {
   align-items: center;
+}
+
+.text-center {
+  text-align: center;
 }
