--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -23,7 +23,6 @@
 .dark-mode-switch,
 .navigation {
   justify-content: space-between;
-  margin: 0 auto;
 
   .navigation {
     padding-left: var(--padding-2);
@@ -119,8 +118,82 @@
 /* Main Areas */
 /* Promotion Area */
 @container main (width >= 1200px ) {
+  /* Promotion Area */
+  .promotion-grid {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(5, auto);
+    padding-left: var(--padding-09);
+  }
+
+  .promotion-grid-header-text {
+    grid-row: 1/1;
+    grid-column: 1/2;
+    max-width: 32.875em;
+
+    padding-top: var(--padding-111);
+    padding-bottom: var(--padding-13);
+
+    .promo-size-text {
+      font-size: var(--font-size-promotion-xl);
+    }
+  }
+  .promotion-grid-text {
+    grid-row: 2/2;
+    grid-column: 1/1;
+    max-width: 32.875em;
+
+    padding-bottom: var(--padding-288);
+  }
+  .promotion-grid-apps-links {
+    grid-row: 3/3;
+    grid-column: 1/1;
+    div {
+      display: flex;
+      flex-direction: row;
+      text-align: center;
+      gap: 1rem;
+
+      .apps-image-links-normal {
+        display: none;
+      }
+    }
+    padding-bottom: var(--padding-1134);
+  }
+
+  .promotion-grid-link,
+  .promotion-grid-phone {
+    padding-top: var(--padding-15);
+    padding-bottom: var(--padding-15);
+  }
+
+  .promotion-grid-link {
+    grid-row: 4/4;
+    grid-column: 1/1;
+  }
+
+  .promotion-grid-phone {
+    grid-row: 1/5;
+    grid-column: 2/2;
+    position: relative;
+
+    .iphone-1 {
+      position: absolute;
+      top: 8.5em;
+      right: 0em;
+      height: auto;
+      transform: scale(1);
+    }
+  }
+
+  .discover-more-btn {
+    align-items: center;
+    padding-bottom: var(--padding-44);
+    img {
+      padding-right: var(--padding-11);
+    }
+  }
 }
-@container main ( 768px < width < 1199px) {
+@container main ( 768px <= width <= 1199px) {
   /* Base */
   .container {
     width: 100%;
@@ -134,6 +207,7 @@
   .promotion-grid-header-text {
     grid-row: 1/1;
     grid-column: 1/3;
+    text-align: center;
 
     padding-top: var(--padding-2);
     padding-bottom: var(--padding-2);
@@ -184,7 +258,8 @@
     .iphone-1 {
       position: absolute;
       margin: auto;
-      width: 100%;
+      width: 28.25em;
+      top: 0em;
       height: auto;
       transform: scale(1);
     }
@@ -213,6 +288,7 @@
   .promotion-grid-header-text {
     grid-row: 1/1;
     grid-column: 1/1;
+    text-align: center;
 
     padding-top: var(--padding-2);
     padding-bottom: var(--padding-2);
