Stor förändring, går över till SCSS, Vite för webbuildern. Lyckas få nu bra grund. SCSS redo för bygga

--- a/bc/assets/css/fonts.css
+++ b/bc/assets/css/fonts.css
@@ -65,12 +65,8 @@ h6 {
   font-size: var(--font-size-primary);
 }
 
-.promo-size-text-a {
+.promo-size-text {
   font-size: var(--font-size-promotion-l);
-}
-
-.promo-size-text-b {
-  font-size: var(--font-size-promotion-xl);
 }
 
 .font-size-regular {
@@ -79,4 +75,9 @@ h6 {
 
 .font-link-small {
   font-size: var(--font-size-link-xsm);
+}
+
+/* Forms */
+.label-header {
+  color: var(--font-label-color);
 }
