--- a/bc/assets/css/components.css
+++ b/bc/assets/css/components.css
@@ -1,19 +1,15 @@
 /* Lets import some vars */
 @import url(/assets/css/vars.css);
 
-.vertical-center {
-  align-items: center;
-}
+/* Header Content */
 
-/* Header */
-/* Menu */
+/* Navigation */
 .main-menu {
   display: flex;
   list-style: none;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 .mobile-menu {
-  display: none;
   color: var(--icon-color-1);
 }
 .main-menu li a {
@@ -31,24 +27,15 @@
   color: var(--link-color-active);
 }
 
-/* Dark Mode Switch */
-.dark-mode-switch {
-  width: var(--dark-mode-switch-size);
-}
-/* Header End* /
-
-
-/* Form Elements */
-
-/* Label */
-.dark-mode-switch label {
-  font-family: var(--font-family);
-  color: var(--font-primary);
+/* Links */
+.promotion-grid-apps-links,
+a {
+  text-decoration: none;
 }
 
 /* Button */
 .btn-sign-in-up {
-  padding: var(--padding-056) var(--padding-11);
+  padding: var(--padding-056) var(--padding-12);
   background-color: var(--btn-primary-color);
   color: var(--root-color);
   text-align: center;
@@ -57,63 +44,18 @@
   border: none;
   border-radius: 0.25em;
 }
+/* Header Content END */
 
-/* Images */
-.apps-image-links-small {
-  display: block;
-}
-.apps-image-links-normal {
-  display: none;
-}
+/* Forms */
 
-.iphone-1 {
-  position: absolute;
-  top: 9.5em;
-  right: 0em;
-  transform: translate(0%, 0%);
+/* Forms End */
+
+/* Icons */
+.dark-mode-switch label {
+  font-family: var(--font-family);
+  color: var(--font-primary);
 }
 
-/* Buttons Promotion & Banner Content */
-
-.inline-block img {
-  height: auto;
+.icon-color {
+  color: var(--icon-color-1);
 }
-
-/* Links */
-
-.text-decoration-none {
-  text-decoration: none;
-}
-
-/* Form Elements End *
-
-/* Responsive Design */
-/* Header */
-@container header (width < 1300px) {
-  .mobile-menu {
-    display: block;
-  }
-
-  .btn-sign-in-up {
-    display: none;
-  }
-}
-@container header (width < 768px) {
-  .mobile-menu {
-    display: block;
-  }
-  .dark-mode-switch {
-    width: var(--dark-mode-switch-size-s);
-  }
-  .dark-mode-label {
-    display: none;
-  }
-}
-
-/* Banner & Promotion */
-@container main (width < 1300px) {
-}
-@container main (width < 768px) {
-}
-
-/* Responsive Design END */
