--- a/bc/assets/css/layout.css
+++ b/bc/assets/css/layout.css
@@ -1,127 +1,10 @@
-/* Lets import some vars */
 @import url(/assets/css/vars.css);
 
-.container {
-  /* With 100% is fallback incase we are using older browsers. Code is 
-    being readd from top to bottom in CSS
-    */
-  max-width: var(--max-content-width);
-}
+/* Main Layout */
 
-.inline-block {
-  display: inline-block;
-}
-
-/* Footer Container Height */
-.container-footer {
-  min-height: var(--min-footer-height);
-}
-/* Footer Container Height */
-
-.background-grey {
-  background-color: cadetblue;
-}
-
-.background-red {
-  background-color: rgb(204, 83, 164);
-}
-
-.background-blue {
-  background-color: rgb(142, 103, 184);
-}
-
-/* GRID Layout */
-
-/* Main */
-.main-grid {
-  position: relative;
-  overflow: hidden;
-  display: grid;
-  grid-template-rows: auto auto auto;
-  grid-template-columns: 1fr;
-  grid-template-areas:
-    "grid-header"
-    "main"
-    "footer";
-  grid-auto-flow: row;
-  gap: 0rem;
-}
-.grid-header {
-  grid-area: grid-header;
-}
-.grid-main {
-  grid-area: grid-main;
-}
-.grid-footer {
-  grid-area: grid-footer;
-}
-
-/* Header */
-.header-grid {
-  display: grid;
-  grid-auto-rows: 1fr;
-  grid-auto-columns: 1fr 1fr;
-  gap: 0rem;
-  grid-template-areas: "logo-nav header-extra-menu";
-}
-.logo-nav {
-  grid-area: logo-nav;
-}
-.header-extra-menu {
-  grid-area: header-extra-menu;
-}
-
-.dark-mode-switch {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* Banner & Promotion */
-.banner-promotion-grid {
-  position: relative;
-  display: grid;
-
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto auto;
-  gap: 0rem;
-
-  overflow: hidden;
-
-  padding-top: var(--padding-9);
-  padding-bottom: var(--padding-3);
-}
-.promotion-title {
-  grid-row: 1/1;
-  grid-column: 1/2;
-}
-.promotion-text-app {
-  grid-row: 2/2;
-  grid-column: 1/2;
-}
-.promotion-link {
-  grid-row: 3/3;
-  grid-column: 1/2;
-  padding-top: var(--padding-113);
-}
-.promotion-image {
-  grid-row: 1/4;
-  grid-column: 2/2;
-}
-.promotion-title,
-.promotion-text-app {
-  max-width: var(--promotion-text-app);
-}
-
-/* AI Generated */
-.banner-background-gradient {
-  position: fixed;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100vw;
-  height: 57rem;
-  /* Guessing and trying to emulate size and position from Figma*/
+/* Base */
+.gradient-container {
+  width: 100%;
   background: radial-gradient(
     125% 125% at 50% 110%,
     rgba(99, 102, 241, 0.1) 0%,
@@ -130,242 +13,332 @@
   );
 }
 
-/* App Features */
-.app-features-grid {
+.container {
+  max-width: var(--max-content-width);
+  margin: auto;
+}
+
+/* Header & Navigation */
+.flex-header,
+.dark-mode-switch,
+.navigation {
+  justify-content: space-between;
+
+  .navigation {
+    padding-left: var(--padding-2);
+  }
+  .flex,
+  .fa-i-c {
+    padding: var(--padding-052);
+  }
+
+  .dark-mode-switch {
+    padding-right: var(--padding-1);
+  }
+}
+
+/* Promotion */
+.promotion-grid {
   display: grid;
-  grid-column: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 0rem;
-  grid-template-areas:
-    "app-features-companies app-features-companies"
-    "app-features-phone-image app-features-text";
-}
-.app-features-companies {
-  grid-area: app-features-companies;
-  overflow: hidden;
-}
-.app-features-phone-image {
-  grid-area: app-features-phone-image;
-}
-.app-features-text {
-  grid-area: app-features-text;
 }
 
-/* Apps Link Flex */
-.flex-banner-app-links-box {
-  display: flex;
-  padding-top: var(--promotion-app-link-box-top);
-}
+/* Main Layout END*/
 
-/* FLEX Layout */
+/* Responsive CSS */
 
-.flex {
-  display: flex;
-}
-
-.flex-direction-column {
-  flex-direction: column;
-}
-
-.flex-center {
-  justify-content: center;
-}
-
-.flex-items-center {
-  align-items: center;
-}
-
-.flex-right-horizontal {
-  justify-content: flex-end;
-}
-/* 40px Gap */
-.flex-gap-sm-a {
-  /* Same as REM Parent Container in Pixel / 16 */
-  gap: var(--header-dark-mode-gap-a);
-}
-
-/* 40px Gap */
-.flex-gap-sm-b {
-  /* Same as REM Parent Container in Pixel / 16 */
-  gap: var(--header-dark-mode-gap-b);
-}
-
-.header-content-flex {
-  display: flex;
-  flex-direction: row;
-  min-height: 4.75rem;
-}
-
-.background-wrapper {
-  container-type: inline-size;
-  container-name: background-w;
-}
-
+/* Wrappers */
+/* Wwe are using Flex here */
 .header-wrapper {
   container-type: inline-size;
   container-name: header;
 }
+
+/* Wwe are using Grid here */
 .main-wrapper {
   container-type: inline-size;
   container-name: main;
 }
-.footer-wrapper {
+
+.base-wrapper {
+  overflow: hidden;
   container-type: inline-size;
-  container-name: footer;
+  container-name: base;
 }
 
-.flex-box {
-  justify-content: space-around;
-  /* min-width: 40.625rem;*/
+/* Break Points */
+/* Base */
+@container base (1200px >= width >= 1600px) {
 }
 
-/* Banner Content */
-.banner-content-flex {
-  display: flex;
-  flex-direction: row;
-}
-
-/* Banner Content END */
-
-/* Paddings & Margins */
-
-/* Widths */
-.with-4 {
-  width: var(--width-4);
-}
-
-.padding-top-bottom-15 {
-  padding: var(--padding-15) 0 var(--padding-15) 0;
-}
-
-.padding-top-bottom-2 {
-  padding: var(--padding-2) 0 var(--padding-2) 0;
-}
-
-.padding-top-2 {
-  padding: var(--padding-2) 0 0 0;
-}
-
-.padding-top-1 {
-  padding: var(--padding-09) 0 0 0;
-}
-
-.padding-right-1 {
-  padding-right: var(--padding-1);
-}
-.padding-left-1 {
-  padding-left: var(--padding-1);
-}
-.padding-right-05 {
-  padding-right: var(--padding-05);
-}
-
-/* Paddings */
-
-/* Responsive Design */
-/* Header */
-@container header (width < 1300px) {
-  .header-content-flex,
+/* Header Area */
+@container header (width >= 1200px ) {
   .mobile-menu {
-    padding-left: var(--padding-07);
-    padding-right: var(--padding-07);
-  }
-  .nav,
-  .btn-sign-in-up {
     display: none;
   }
-  .flex-gap-sm-a {
-    gap: 0rem;
-  }
 }
-@container header (width < 768px) {
-  .flex-box {
-    min-width: var(--max-content-width-s-1);
-    padding-left: var(--padding-07);
-    padding-right: var(--padding-07);
+/* Tables & Mini PC */
+@container header ( 768px < width < 1199px) {
+  .flex-header {
+    padding: var(--padding-052);
   }
-  .nav {
+  .dark-mode-switch {
+    padding-right: var(--padding-1);
+  }
+  .fa-lg {
+    line-height: 0em;
+    vertical-align: -0.135em;
+  }
+  .navigation,
+  .btn-sign-button-container {
     display: none;
   }
-
-  /* 40px Gap */
-  .flex-gap-sm-b {
-    /* Same as REM Parent Container in Pixel / 16 */
-    justify-content: flex-end;
-    gap: 0em;
+  .label-text {
+    vertical-align: baseline;
+  }
+}
+/* Mobile Phones */
+@container header (width <= 767px) {
+  .flex-header {
+    padding: var(--padding-052);
+  }
+  .navigation,
+  .label-text,
+  .btn-sign-button-container {
+    display: none;
+  }
+  .fa-lg {
+    line-height: 0em;
+    vertical-align: -0.135em;
+  }
+  .dark-mode-switch {
+    padding-right: var(--padding-12);
   }
 }
 
-@container background-w (width < 1300px) {
-  .banner-background-gradient {
-    height: var(--promotion-banner-height-t);
-  }
-}
-
-/* Banner & Promotion */
-@container main (width < 1300px) {
-  .flex-banner-app-links-box {
-    padding-left: var(--padding17);
-    padding-right: var(--padding17);
-  }
-  .content-max-width {
-    max-width: var(--max-content-width-m-1);
+/* Main Areas */
+/* Promotion Area */
+@container main (width >= 1200px ) {
+  /* Promotion Area */
+  .promotion-grid {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(5, auto);
+    padding-left: var(--padding-09);
   }
 
-  .banner-promotion-grid {
-    padding-top: var(--min-header-height);
-    padding-bottom: var(--padding-3);
+  .promotion-grid-header-text {
+    grid-row: 1/1;
+    grid-column: 1/2;
+    max-width: 32.875em;
+
+    padding-top: var(--padding-111);
+    padding-bottom: var(--padding-13);
+
+    .promo-size-text {
+      font-size: var(--font-size-promotion-xl);
+    }
+  }
+  .promotion-grid-text {
+    grid-row: 2/2;
+    grid-column: 1/1;
+    max-width: 32.875em;
+
+    padding-bottom: var(--padding-288);
+  }
+  .promotion-grid-apps-links {
+    grid-row: 3/3;
+    grid-column: 1/1;
+    div {
+      display: flex;
+      flex-direction: row;
+      text-align: center;
+      gap: 1rem;
+
+      .apps-image-links-normal {
+        display: none;
+      }
+    }
+    padding-bottom: var(--padding-1134);
+  }
+
+  .promotion-grid-link,
+  .promotion-grid-phone {
+    padding-top: var(--padding-15);
+    padding-bottom: var(--padding-15);
+  }
+
+  .promotion-grid-link {
+    grid-row: 4/4;
+    grid-column: 1/1;
+  }
+
+  .promotion-grid-phone {
+    grid-row: 1/5;
+    grid-column: 2/2;
+    position: relative;
+
+    .iphone-1 {
+      position: absolute;
+      top: 8.5em;
+      right: 0em;
+      height: auto;
+      transform: scale(1);
+    }
+  }
+
+  .discover-more-btn {
     align-items: center;
-    justify-items: center;
+    padding-bottom: var(--padding-44);
+    img {
+      padding-right: var(--padding-11);
+    }
+  }
+}
+@container main ( 768px <= width <= 1199px) {
+  /* Base */
+  .container {
+    width: 100%;
+  }
+  /* Promotion Area */
+  .promotion-grid {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(5, auto);
+  }
 
-    .promotion-image {
-      grid-row: 1/3;
-      grid-column: 2/2;
+  .promotion-grid-header-text {
+    grid-row: 1/1;
+    grid-column: 1/3;
+    text-align: center;
 
-      .iphone-1 {
-        aspect-ratio: 1;
-        position: relative;
-        width: 28.25em;
-        height: 26.0626em;
-        right: 8em;
+    padding-top: var(--padding-2);
+    padding-bottom: var(--padding-2);
+    padding-right: var(--padding-111);
+    padding-left: var(--padding-111);
+  }
+  .promotion-grid-text {
+    grid-row: 2/2;
+    grid-column: 1/1;
+
+    padding-top: var(--padding-5);
+    padding-bottom: var(--padding-288);
+    padding-left: var(--padding-15);
+  }
+  .promotion-grid-apps-links {
+    grid-row: 3/3;
+    grid-column: 1/1;
+    div {
+      display: flex;
+      flex-direction: row;
+      text-align: center;
+      gap: 1rem;
+
+      .apps-image-links-normal {
+        display: none;
+      }
+    }
+    padding-left: var(--padding-15);
+  }
+
+  .promotion-grid-link,
+  .promotion-grid-phone {
+    padding-top: var(--padding-15);
+    padding-bottom: var(--padding-15);
+  }
+
+  .promotion-grid-link {
+    grid-row: 4/4;
+    grid-column: 1/1;
+  }
+
+  .promotion-grid-phone {
+    grid-row: 2/5;
+    grid-column: 2/2;
+    position: relative;
+    margin-right: var(--padding-15);
+
+    .iphone-1 {
+      position: absolute;
+      margin: auto;
+      width: 28.25em;
+      top: 0em;
+      height: auto;
+      transform: scale(1);
+    }
+  }
+
+  .discover-more-btn {
+    align-items: center;
+    padding-left: var(--padding-15);
+    img {
+      padding-right: var(--padding-11);
+    }
+  }
+}
+@container main ( width <= 767px) {
+  /* Base */
+  .container {
+    width: 100%;
+  }
+  /* Promotion Area */
+  /* Grid Setup */
+  .promotion-grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(5, auto);
+  }
+
+  .promotion-grid-header-text {
+    grid-row: 1/1;
+    grid-column: 1/1;
+    text-align: center;
+
+    padding-top: var(--padding-2);
+    padding-bottom: var(--padding-2);
+    padding-right: var(--padding-3);
+    padding-left: var(--padding-3);
+  }
+  .promotion-grid-text {
+    grid-row: 2/2;
+    grid-column: 1/1;
+    text-align: center;
+
+    padding-top: var(--padding-31);
+    padding-bottom: var(--padding-31);
+    padding-right: var(--padding-059);
+    padding-left: var(--padding-059);
+  }
+  .promotion-grid-apps-links {
+    grid-row: 3/3;
+    grid-column: 1/1;
+    div {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+
+      .apps-image-links-small {
+        display: none;
       }
     }
   }
+  .promotion-grid-link {
+    grid-row: 4/4;
+    grid-column: 1/1;
 
-  .promotion-title {
-    grid-row: 1/1;
-    grid-column: 1/3;
+    padding-top: var(--padding-15);
+    padding-bottom: var(--padding-15);
 
-    padding-left: var(--padding-113);
-    padding-right: var(--padding-113);
-    max-width: 100%;
+    vertical-align: baseline;
+  }
 
-    text-align: center;
+  .discover-more-btn {
+    align-items: center;
+    justify-content: center;
 
-    .font-color-heading-text {
-      font-size: var(--font-size-promotion-x);
+    img {
+      padding-right: var(--padding-11);
     }
   }
-  .promotion-text-app {
-    padding-top: var(--padding-9);
-    padding-left: var(--padding-15);
-    padding-right: var(--padding-15);
-  }
-  .promotion-link {
-    padding-top: var(--padding-3);
-    padding-left: var(--padding-15);
+  .promotion-grid-phone {
+    display: none;
   }
 }
-@container main (width < var(--mobile-pad)) {
-  .banner-content-flex {
-    flex-direction: column;
-  }
-  .flex-banner-app-links-box {
-    padding-left: var(--padding17);
-    padding-right: var(--padding17);
-  }
-  .content-max-width {
-    max-width: var(--max-content-width-m-1);
-  }
-}
-/* Responsive Design END */
+
+/* Responsive CSS END*/
